# VERO

./: .devdbrc  .gitignore  API_Guide.html  API_Guide.md  Framework.md  Personal AI Research Assistant.md  README.md  Vero Dashboard Mockup,png  models.json
.github/workflows/: ci.yml
backend/: .pyre_configuration  README.md  debug_chroma.py  debug_chunk_offset.py  debug_langchain.py  debug_md.py  debug_session.py  demo.py  list_models.py  pyproject.toml  requirements.txt  reset_db.py  run_layers.py  test_layer1.py
backend/app/: agent.py  answering.py  bm25_cache.py  database.py  llm.py  main.py  models.py  pipeline.py  postprocess.py  prompts.py  query_rewriter.py  reranker.py  retrieval.py  schema.py  utils.py  vectorstore.py  warmup.py
backend/app/chunks/: __init__.py  base.py  hierarchical.py  markdown.py  recursive.py  semantic.py
backend/app/embeddings/: __init__.py  base.py  local.py
backend/app/parsers/: __init__.py  contracts.py  docx.py  pdf.py  pptx.py  repo.py  text.py  web.py
backend/app/routers/: activity.py  chat.py  documents.py  projects.py  search.py
backend/tests/: test_conversational.py  test_layer1.py  test_layer2.py  test_layer3.py  test_layer4.py  test_layer5.py  test_layer6.py  test_pipeline_quality.py
backend/tests/fixtures/results/: Lec1_parsed.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  api.js  index.css  main.jsx
frontend/src/components/ui/: Toast.jsx
frontend/src/hooks/: useMediaQuery.js
frontend/src/pages/: ActivityPage.jsx  DiscoveryPage.jsx  ProjectsPage.jsx  WorkspacePage.jsx
(+2 files in other folders)
