[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vero-backend"
version = "0.1.0"
description = "VERO — Personal AI Research Assistant Backend"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20",
    "pydantic>=2.0",
    "pymupdf>=1.24",
    "python-docx>=1.1",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "httpx"]
